style/custom: Fix bottombar
We have to add some margin to the content, to make sure we can see
everything and nothing gets hidden by the bottom bar.

--- a/_assets/stylesheets/_custom.sass
+++ b/_assets/stylesheets/_custom.sass
@@ -15,3 +15,14 @@ h1
 h2
   border-bottom: 1px solid black
 
+div#article_content
+  margin-bottom: 3em
+
+div#footer
+  position: fixed
+  height: 2em
+  bottom: 0
+  color: #aaa
+  width: 100%
+  background-color: $oil
+
